--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>2019-nCov 한국 감염표</title>
     <link rel="stylesheet" href="Treant.css">
     <link rel="stylesheet" href="cc.css">
+    <meta name="description" content="신종 코로나(우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
+    <meta property="og:url" content="https://ncov-korea.cf/" >
+    <meta property="og:site_name" content="2019-nCov 한국 감염표" >
+    <meta property="og:title" content="2019-nCov 한국 감염표" >
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136150577-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-136150577-3');
+    </script>
 </head>
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0 0 20px;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
@@ -43,6 +56,13 @@
         <h3>자료 출처</h3>
         <p>질병관리본부 홈페이지와 언론 기사</p>
         <p>* 이유는 모르겠으나 출처마다 나이가 ± 1 정도 차이 날수있음</p>
+        <br>
+        <h3>제보</h3>
+        <p>현재 제보 페이지 생성중입니다.</p>
+        <br>
+        <h3>사이트</h3>
+        <p><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500">질병관리본부 홈페이지</a></p>
+        <p><a href="http://www.mohw.go.kr/react/popup_200128.html">선별진료소 현황</a> Ctrl+F로 검색가능</p>
     </div>
     <script src="raphael.js"></script>
     <script src="Treant.min.js"></script>
