--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       gtag('config', 'UA-136150577-3');
     </script>
+    <script data-ad-client="ca-pub-2722856117249943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <style>
         a{text-decoration: none;color: #3f51b5;}
         .sitelist{line-height: 2;padding: 0}
@@ -37,7 +38,17 @@
         <p>데이터 파일을 이용하여 쉽게 관계도가 그려지도록 만들어졌으며,</p>
         <p>누구나 쉽게 데이터 파일을 수정가능하도록 아래와 같이 형식을 소개 해드립니다.</p>
         <br>
-        <h3>정보 파일</h3>
+        <h3>자료 출처</h3>
+        <p>질병관리본부 홈페이지와 뉴스 기사</p>
+        <p>* 출처마다 나이가 ± 1 정도 차이 날수도 있음</p>
+        <br>
+        <h3>사이트</h3>
+        <ul class="sitelist">
+            <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500">질병관리본부 홈페이지</a></li>
+            <li><a href="http://www.mohw.go.kr/react/popup_200128.html">선별진료소 현황</a> Ctrl+F로 검색가</li>
+        </ul>
+        <br>
+        <h3>데이터 파일</h3>
         <p>다운로드 : <a href="./data.json">다운로드 (.json)</a></p>
         <h4>형식 (버전 0.0.1)</h4>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
@@ -54,22 +65,12 @@
             }
         </ul>
         <br>
+        <h3>제보</h3>
+        <p>제보 페이지는 며칠이내 생성예정</p>
+        <br>
         <h3>사용한 오픈소스</h3>
         <p>treant-js (MIT) https://fperucic.github.io/treant-js</p>
         <p>표를 그리기 위한 오픈소스로 기능 제작을 위해 일부 변형을 하였음</p>
-        <br>
-        <h3>자료 출처</h3>
-        <p>질병관리본부 홈페이지와 언론 기사</p>
-        <p>* 이유는 모르겠으나 출처마다 나이가 ± 1 정도 차이 날수있음</p>
-        <br>
-        <h3>제보</h3>
-        <p>현재 제보 페이지 생성중입니다.</p>
-        <br>
-        <h3>사이트</h3>
-        <ul class="sitelist">
-            <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500">질병관리본부 홈페이지</a></li>
-            <li><a href="http://www.mohw.go.kr/react/popup_200128.html">선별진료소 현황</a> Ctrl+F로 검색가</li>
-        </ul>
     </div>
     <script src="raphael.js"></script>
     <script src="Treant.min.js"></script>
