--- a/search.html
+++ b/search.html
@@ -3,13 +3,13 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-    <title>2019-nCov 한국 감염표</title>
+    <title>2019-nCov 선별진료소 검색</title>
     <link rel="stylesheet" href="Treant.css">
     <link rel="stylesheet" href="cc.css">
-    <meta name="description" content="신종 코로나(우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
+    <meta name="description" content="신종 코로나(우한 폐렴) 선별진료소 검색을 도와주는 페이지입니다.">
     <meta property="og:url" content="https://ncov-korea.cf/" >
-    <meta property="og:site_name" content="2019-nCov 한국 감염표" >
-    <meta property="og:title" content="2019-nCov 한국 감염표" >
+    <meta property="og:site_name" content="선별진료소 검색" >
+    <meta property="og:title" content="선별진료소 검색" >
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136150577-3"></script>
     <script>
