--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul class="sitelist">
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500">질병관리본부 홈페이지</a></li>
             <li><a href="./search.html">선별진료소 검색하기</li>
-            <li><a href="http://www.mohw.go.kr/react/popup_200128.html">선별진료소 현황</a> Ctrl+F로 검색가능합니다.</li>
+            <li><a href="http://www.mohw.go.kr/react/popup_200128.html">선별진료소 현황</a></li>
         </ul>
         <br>
         <h3>데이터 파일</h3>
@@ -61,7 +61,7 @@
                 <li>"country":"cn",<span class="notjson"> => cn: 중국, kr: 한국</span></li>
                 <li>"contact":45,<span class="notjson"> => 접촉자 수</span></li>
                 <li>"hospital":"인천의료원",<span class="notjson"> => 격리 병원</span></li>
-                <li>"from":"우한",<span class="notjson"> => 방문 지역 {"우한","국내 감염","중국,"일본"}</span></li>
+                <li>"from":"우한 방문",<span class="notjson"> => 방문 지역 {"국내 감염","?? 방문"}</span></li>
                 <li>"confirmDate":"2020-01-20"<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
             }
         </ul>
