--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         </ul>
         <br>
         <h3>데이터 파일</h3>
-        <p>다운로드 : <a href="./data.json">다운로드 (.json)</a></p>
-        <h4>형식 (버전 0.0.1)</h4>
+        <p>다운로드 : <a href="./data.json">보기 (.json)</a></p>
+        <h4>데이터 형식 (버전 0.0.1)</h4>
+        <p>개발자들이 주로 쓰는 json 형식, 어렵지않다. 표를 글자로 표현한다고 생각하면 쉽다.</p>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
             {
                 <li>"num":1,<span class="notjson"> => 첫번째 감염자</span></li>
