--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <h3>소개</h3>
         <p>신종 코로나 바이러스 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
         <p>데이터 파일을 이용하여 쉽게 관계도가 그려지도록 만들어졌으며,</p>
-        <p>누구나 쉽게 데이터 파일을 수정가능하도록 아래와 같이 형식을 소개 해드립니다.</p>
+        <p>누구나 쉽게 데이터 파일을 수정 가능하도록 아래와 같이 형식을 소개해드립니다.</p>
         <br>
         <h3>자료 출처</h3>
         <p>질병관리본부 홈페이지와 뉴스 기사</p>
-        <p>* 출처마다 나이가 ± 1 정도 차이 날수도 있음</p>
+        <p>* 출처마다 나이가 ± 1 정도 차이 날 수도 있음</p>
         <br>
         <h3>사이트</h3>
         <ul class="sitelist">
@@ -55,7 +55,7 @@
         <br>
         <h3>데이터 파일</h3>
         <p>다운로드 : <a href="./data.json" target="_blank">보기 (.json)</a></p>
-        <p>개발자들이 주로 쓰는 json 형식이고 어렵지않다. 표를 글자로 표현한다고 생각하면 쉽다.</p>
+        <p>개발자들이 주로 쓰는 json 형식이고 어렵지 않다. 표를 글자로 표현한다고 생각하면 쉽다.</p>
         <h4>형식 (버전 0.0.1)</h4>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
             {
@@ -72,7 +72,21 @@
         </ul>
         <br>
         <h3>제보</h3>
-        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf0tnYWEV_3isDW87uY4wBWWy27e5Hog8y23Ta7oy4aQdMJ9A/viewform" target="_blank">제보 / 수정요청 / 건의 하러가기</a></p>
+        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf0tnYWEV_3isDW87uY4wBWWy27e5Hog8y23Ta7oy4aQdMJ9A/viewform" target="_blank"># 제보 / 수정 요청 / 건의 하러가기</a></p>
+        <p>만약 반영이 안 된 확진자 정보가 있다면 아래의 형식을 수정하여 수정 요청으로 보내주시면 확인 후 적용해드립니다.</p>
+        <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
+            {
+                <li>"num":1,</li>
+                <li>"sex":"w",</li>
+                <li>"age":35,</li>
+                <li>"parent":0,</li>
+                <li>"country":"cn",</li>
+                <li>"contact":45,</li>
+                <li>"hospital":"인천의료원",</li>
+                <li>"from":"우한 방문",</li>
+                <li>"confirmDate":"2020-01-20"</li>
+            }
+        </ul>
         <br>
         <h3>사용한 오픈소스</h3>
         <p>treant-js (MIT) https://fperucic.github.io/treant-js</p>
