--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="sitelist">
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
             <li><a href="./search.html" target="_blank">선별진료소 검색하기</li>
-            <li><a href="http://www.mohw.go.kr/react/popup_200128.html" target="_blank">선별진료소 현황</a></li>
+            <li><a href="http://coronamap.site/" target="_blank">코로나맵</a></li>
         </ul>
         <br>
         <h3>데이터 파일</h3>
