--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 </head>
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0 0 20px;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
-    <div class="top"></div>
+    <div class="top">
+        <img src="./imgs/1.png" style="max-width: 100%">
+    </div>
     <div class="chart" id="nCov"> 표 생성중. . . 계속 생성중이라면, 새로고침 해주세요 </div>
     <div class="content">
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
+        <br>
+        <img src="./imgs/2.png" style="max-width: 100%">
         <br>
         <h3>소개</h3>
         <p>신종 코로나 바이러스 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
@@ -49,7 +53,7 @@
         <h3>사이트</h3>
         <ul class="sitelist">
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
-            <li><a href="./search.html" target="_blank">선별진료소 검색하기</li>
+            <li><a href="./search.html">선별진료소 검색하기</li>
             <li><a href="http://coronamap.site/" target="_blank">코로나맵</a></li>
         </ul>
         <br>
