--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script data-ad-client="ca-pub-2722856117249943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <style>
         a{text-decoration: none;color: #3f51b5;}
-        .sitelist{line-height: 2;padding: 0}
-        .sitelist li{list-style: inside;}
+        .sitelist{padding: 0}
+        .sitelist li{list-style: inside;line-height: 2;}
         .top{margin: 0 30px;}
         @media(max-width:1024px){
             .top{margin: 0;}
@@ -42,6 +42,8 @@
         <h3>통계</h3>
         <div id="stats"></div>
         <br>
+        <p>* 추가로 통계에 보여줄만한 지표 아이디어 있으시면 아래 건의하기에서 제보부탁드립니다.</p>
+        <br>
         <h3>소개</h3>
         <p>신종 코로나 바이러스 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
         <p>데이터 파일을 이용하여 쉽게 관계도가 그려지도록 만들어졌으며,</p>
@@ -54,7 +56,7 @@
         <h3>사이트</h3>
         <ul class="sitelist">
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
-            <li><a href="./search.html">선별진료소 검색하기</li>
+            <li><a href="./search.html">선별진료소 검색하기</a> (검색기능을 추가하여 제공중)</li>
             <li><a href="http://coronamap.site/" target="_blank">코로나맵</a></li>
         </ul>
         <br>
@@ -92,6 +94,7 @@
                 <li>"confirmDate":"2020-01-20"</li>
             }
         </ul>
+        <p>추가로 표시해줄 내용, 정리해서 보기쉽게 만들 내용이 있다면, 제보바랍니다.</p>
         <br>
         <h3>사용한 오픈소스</h3>
         <p>treant-js (MIT) https://fperucic.github.io/treant-js</p>
@@ -99,92 +102,7 @@
     </div>
     <script src="raphael.js"></script>
     <script src="Treant.min.js"></script>
-    <script>
-        var Arrs=[];
-        var Jobj;
-        var before_X=0;
-        Arrs.push(JSON.parse('{"text": {"cn": "2019-nCov","name":""},"HTMLclass":"title"}'));
-        (function(){
-            var xhr =new XMLHttpRequest;
-            xhr.open("GET" , './data.json' , true);
-            xhr.onreadystatechange = function() {
-                if(xhr.readyState == 4){
-                    if(xhr.status == 200){
-                        Jobj=JSON.parse(xhr.responseText);
-                        document.getElementById("update").innerText="최근 업데이트 : "+Jobj.info.update;
-                        var age_sum=0;
-                        var m_cou=0;
-                        for (var i = 0; i < Jobj.data.length; i++) {
-                            Arrs.push(JSON.parse('{}'));
-                            Arrs[Arrs.length-1].text=JSON.parse('{"name": "'+Jobj.data[i].num+' ('+Jobj.data[i].age+'세)"}');
-                            //,"date":"'+Jobj.data[i].confirmDate+'"
-                            Arrs[Arrs.length-1].image="./"+Jobj.data[i].sex+".png";
-                            Arrs[Arrs.length-1].parent=Arrs[Jobj.data[i].parent];
-                            //var bool_wuhan=(Jobj.data[i].from=="우한 방문"?true:false);
-                            //Arrs[Arrs.length-1].HTMLclass="wuhan_"+bool_wuhan;
-                            age_sum+=Jobj.data[i].age;
-                            if(Jobj.data[i].sex=="m"){m_cou++;}
-                            /*if(i==8){
-                                Arrs[Arrs.length-1].childrenDropLevel=2;
-                            }*/
-                        }
-                        Arrs.push(JSON.parse('{"container": "#nCov","nodeAlign": "BOTTOM","connectors": {"type": "step"},"node": {"HTMLclass": "node1"}}'));
-                        new Treant( Arrs );
-                        before_X=window.innerWidth;
-
-                        var nodes=document.getElementsByClassName("node");
-                        for (var i = 0; i < nodes.length; i++) {
-                            nodes[i].addEventListener('click', MsgAlert);
-                        }
-                        var html='';
-                        html="<p>평균 연령 : "+parseFloat((age_sum/Jobj.data.length).toFixed(1))+"세</p>";
-                        var balance_2_1=(m_cou>(Jobj.data.length-m_cou)?true:false);
-                        html+="<p>성비 : 남="+m_cou+"명 : 여="+(Jobj.data.length-m_cou)+"명 "+(balance_2_1?"("+parseFloat((m_cou/(Jobj.data.length-m_cou)).toFixed(1))+" : 1)":"(1 : "+parseFloat(((Jobj.data.length-m_cou)/m_cou).toFixed(1))+")")+"</p>";
-                        document.getElementById("stats").innerHTML=html;
-                    }else{
-                        alert("데이터 로딩에 실패하였습니다.")
-                    }
-                }
-            }
-            xhr.send();
-        })();
-        window.addEventListener('resize',function (){
-            if(before_X!=window.innerWidth){
-                Treant( Arrs );
-                var nodes=document.getElementsByClassName("node");
-                for (var i = 0; i < nodes.length; i++) {
-                    nodes[i].addEventListener('click', MsgAlert);
-                }
-            }
-        })
-        function showDetail(id_,wid_,hei_){
-            document.getElementById(id_).style.display='';
-            document.getElementById(id_).style.left=(window.innerWidth-wid_)/2+"px";
-            document.getElementById(id_).style.top=(window.innerHeight-hei_)/2+"px";
-        }
-        function MsgAlert(){
-            var num_=this.getElementsByClassName("node-name")[0].innerText.split(" ")[0];
-            if(num_==""){return;}
-            var info=Jobj.data[num_-1];
-            document.getElementById('title_').innerText=info.num+"번 확진자";
-            var html='';
-            var country='';
-            switch(info.country){
-                case "cn":
-                    country="중국";
-                    break;
-                case "kr":
-                    country="한국";
-                    break;
-            }
-            html+="<h3 class='d'>"+info.from+" <span>"+info.age+(isNaN(info.age)?"?세":"세")+" "+country+" "+(info.sex=="w"?"여성":"남성")+"</span></h3>";
-            html+="<p>접촉자 "+(typeof(info.contact)!="undefined"?info.contact+"명":"확인중")+", "+(typeof(Arrs[num_].children)!="undefined"?Arrs[num_].children.length+"":"0")+"명에게 전파</p>";
-            html+="<p>격리 병원 : "+info.hospital+"</p>";
-            html+="<p>확진 날짜 : "+info.confirmDate+"</p>";
-            document.getElementById('info_').innerHTML=html;
-            showDetail("alertMsg",324,204);
-        }
-    </script>
+    <script src="main.min.js"></script>
 <div id="alertMsg" style="display: none;">
     <span class="xbtn" title="닫기" onclick="document.getElementById('alertMsg').style.display='none';">X</span>
     <h2 id="title_"></h2>
