--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
         </ul>
         <p>추가로 표시해줄 내용, 정리해서 보기쉽게 만들 내용이 있다면, 제보바랍니다.</p>
         <br>
+        <h3>포스트</h3>
+        <ul class="sitelist">
+            <li><a href="/post/1.html">신종 코로나 바이러스는 무엇이고, 예방법은?</a></li>
+            <li><a href="/post/2.html">치료약이 없어 고령환자에게 매우 취약하다.</a></li>
+        </ul>
+        <br>
         <h3>사용한 오픈소스</h3>
         <p>treant-js (MIT) https://fperucic.github.io/treant-js</p>
         <p>표를 그리기 위한 오픈소스로 기능 제작을 위해 일부 변형을 하였음</p>
