--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         <ul class="sitelist">
             <li><a href="/post/1.html">신종 코로나 바이러스는 무엇이고, 예방법은?</a></li>
             <li><a href="/post/2.html">치료약이 없어 고령환자에게 매우 취약하다.</a></li>
+            <li><a href="/post/3.html">치사율 2%? 15%?</a></li>
+            <li><a href="/post/4.html">무증상 감염? 독일 사례보고</a></li>
         </ul>
         <br>
         <h3>사용한 오픈소스</h3>
