--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h3>소개</h3>
         <p>신종 코로나 바이러스 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
         <p>데이터 파일을 이용하여 쉽게 관계도가 그려지도록 만들어졌으며,</p>
-        <p>누구나 쉽게 데이터 파일을 수정 가능하도록 아래에 형식을 소개해드립니다.</p>
+        <p>누구나 쉽게 데이터 파일에 접근 가능하도록 아래에 형식을 소개해드립니다.</p>
         <br>
         <h3>자료 출처</h3>
         <p>질병관리본부 홈페이지와 뉴스 기사</p>
