--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         @media(max-width:1024px){
             .top{margin: 0;}
         }
+        .status_0{background-color: #222;color: #fff;}
+        .status_2{border: 1px solid #eee;}
     </style>
 </head>
 <body>
@@ -63,7 +65,7 @@
         <h3>데이터 파일</h3>
         <p>다운로드 : <a href="./data.json" target="_blank">보기 (.json)</a></p>
         <p>개발자들이 주로 쓰는 json 형식이고 어렵지 않다. 표를 글자로 표현한다고 생각하면 쉽다.</p>
-        <h4>형식 (버전 0.0.1)</h4>
+        <h4>형식 (버전 0.0.2)</h4>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
             {
                 <li>"num":1,<span class="notjson"> => 첫번째 감염자</span></li>
@@ -74,6 +76,8 @@
                 <li>"contact":45,<span class="notjson"> => 접촉자 수</span></li>
                 <li>"hospital":"인천의료원",<span class="notjson"> => 격리 병원</span></li>
                 <li>"from":"우한 방문",<span class="notjson"> => 방문 지역 {"국내 감염","?? 방문"}</span></li>
+                <li>"wuhan":true,<span class="notjson"> => 우한 방문여부</span></li>
+                <li>"status":1,<span class="notjson"> => 상태 {0:사망, 1:격리 중, 2:완치}</span></li>
                 <li>"confirmDate":"2020-01-20"<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
             }
         </ul>
@@ -91,6 +95,8 @@
                 <li>"contact":45,</li>
                 <li>"hospital":"인천의료원",</li>
                 <li>"from":"우한 방문",</li>
+                <li>"wuhan":true,</li>
+                <li>"status":1,</li>
                 <li>"confirmDate":"2020-01-20"</li>
             }
         </ul>
