--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3>데이터 파일</h3>
         <p>다운로드 : <a href="./data.json" target="_blank">보기 (.json)</a></p>
         <p>개발자들이 주로 쓰는 json 형식이고 어렵지 않다. 표를 글자로 표현한다고 생각하면 쉽다.</p>
-        <h4>형식 (버전 0.0.2) <a href="/post/version.html" target="_blank">이전버전 및 규칙 보기</a></h4>
+        <h4>형식 (버전 0.0.2) <a href="/post/version.html">이전버전 및 규칙 보기</a></h4>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
             {
                 <li>"num":1,<span class="notjson"> => 첫번째 감염자</span></li>
