--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://ncov-korea.cf/" >
     <meta property="og:site_name" content="2019-nCov 한국 감염표" >
     <meta property="og:title" content="2019-nCov 한국 감염표" >
+    <meta name="google-site-verification" content="45KTYZYJ4dvOmdfBebeRjNCjciQHB_dAiZ4O4rKtoyU" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136150577-3"></script>
     <script>
