--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>질병관리본부 홈페이지와 뉴스 기사</p>
         <p>* 출처마다 나이가 ± 1 정도 차이 날 수도 있음</p>
         <br>
-        <h3>사이트</h3>
+        <h3>사이트 추천</h3>
         <ul class="sitelist">
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
             <li><a href="./search.html">선별진료소 검색하기</a> (검색기능을 추가하여 제공중)</li>
