--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="sitelist">
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
             <li><a href="./search.html">선별진료소 검색하기</a> (검색기능을 추가하여 제공중)</li>
-            <li><a href="https://www.mohw.go.kr/react/popup_200128.html">선별진료소 검색하기</a> (공식: 2020-02-04 부터 검색기능 업데이트)</li>
+            <li><a href="https://www.mohw.go.kr/react/popup_200128.html" target="_blank">선별진료소 검색하기</a> (공식: 2020-02-04 부터 검색기능 업데이트)</li>
             <li><a href="http://coronamap.site/" target="_blank">코로나맵</a></li>
         </ul>
         <br>
