--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <!--<h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">마스크 착용하고 손으로 눈코입만 안만지면 전염이 안되는 질병!</span> <span style="display: inline-block;margin: 6px">전염병 예방, 기본도 안지킬때 감염될수있습니다.</span></h1>-->
     <div class="top">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-2722856117249943"
@@ -35,7 +35,7 @@
              data-full-width-responsive="true"></ins>
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </script>-->
     </div>
     <div class="chart" id="nCov"> 표 생성중. . . 계속 생성중이라면, 새로고침 해주세요 </div>
     <div class="content">
