--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li>"country":"cn",<span class="notjson"> => cn: 중국, kr: 한국</span></li>
                 <li>"contact":45,<span class="notjson"> => 접촉자 수</span></li>
                 <li>"hospital":"인천의료원",<span class="notjson"> => 격리 병원</span></li>
-                <li>"from":"우한 방문",<span class="notjson"> => 방문 지역 {"국내 감염","?? 방문" ...}</span></li>
+                <li>"from":"우한 방문",<span class="notjson"> => 방문 지역 또는 모감염자와 관계 {"?? 방문","#0 지인" ...}</span></li>
                 <li>"wuhan":true,<span class="notjson"> => 우한 방문여부</span></li>
                 <li>"status":1,<span class="notjson"> => 상태 {0:사망, 1:격리 중, 2:완치}</span></li>
                 <li>"confirmDate":"2020-01-20"<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
