--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li>"country":"cn",<span class="notjson"> => cn: 중국, kr: 한국</span></li>
                 <li>"contact":45,<span class="notjson"> => 접촉자 수</span></li>
                 <li>"hospital":"인천의료원",<span class="notjson"> => 격리 병원</span></li>
-                <li>"from":"우한 방문",<span class="notjson"> => 방문 지역 또는 모감염자와 관계 {"?? 방문","#0 지인" ...}</span></li>
+                <li>"from":"우한 방문",<span class="notjson"> => 모감염자와 관계 또는 방문 지역 {"#0 지인","?? 방문", ...}</span></li>
                 <li>"wuhan":true,<span class="notjson"> => 우한 방문여부</span></li>
                 <li>"status":1,<span class="notjson"> => 상태 {0:사망, 1:격리 중, 2:완치}</span></li>
                 <li>"confirmDate":"2020-01-20"<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
@@ -109,6 +109,7 @@
             <li><a href="/post/2.html">치료약이 없어 고령환자에게 매우 취약하다.</a></li>
             <li><a href="/post/3.html">치사율 2%? 15%?</a></li>
             <li><a href="/post/4.html">무증상 감염? 독일 사례보고</a></li>
+            <li><a href="/post/5.html">마스크가 전염을 막았다</a></li>
         </ul>
         <br>
         <h3>사용한 오픈소스</h3>
