--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       gtag('config', 'UA-136150577-3');
     </script>
     <script data-ad-client="ca-pub-2722856117249943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <style>
+        .stats_inner{display:inline-block;margin: 0 50px 0 0;vertical-align: top;}
+        @media(max-width:400px){
+            .stats_inner{margin: 0;}
+        }
+    </style>
 </head>
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
@@ -41,15 +48,27 @@
     <div class="content">
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <br>
-        <h3>통계</h3>
-        <div id="stats"></div>
-        <br>
-        <p>* 추가로 통계에 보여줄만한 지표 아이디어 있으시면 아래 건의하기에서 제보부탁드립니다.</p>
-        <br>
         <h3>소개</h3>
         <p>신종 코로나 바이러스 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
         <p>데이터 파일을 이용하여 쉽게 관계도가 그려지도록 만들어졌으며,</p>
-        <p>누구나 쉽게 데이터 파일에 접근 가능하도록 아래에 형식을 소개해드립니다.</p>
+        <p>누구나 쉽게 데이터 파일에 접근 가능하도록 페이지 하단에 형식을 소개해드립니다.</p>
+        <br>
+        <p>방문 국가별 데이터를 숨김(▲) / 보이기(▼) 할 수 있습니다.</p>
+        <p>확진자 클릭시 공식적으로 공개된 정보들이 표시됩니다.</p>
+        <p>모바일과 PC에서 볼수있으나 모바일은 표시할수있는 양이 적으므로 불편할수있습니다.</p>
+        <br>
+        <h3>통계</h3>
+        <div id="stats"></div>
+        <br>
+        <h3>그래프 통계</h3>
+        <div id="stats2">
+            <h4>일별 확진자/완치자 통계</h4>
+            <div style="max-width: 800px;">
+                <canvas id="Day_stats" width="400" height="200"></canvas>
+            </div>
+        </div>
+        <br>
+        <p>* 추가로 통계에 보여줄만한 지표 아이디어 있으시면 아래 건의하기에서 제보부탁드립니다.</p>
         <br>
         <h3>자료 출처</h3>
         <p>질병관리본부 홈페이지와 뉴스 기사</p>
@@ -65,8 +84,8 @@
         <br>
         <h3>데이터 파일</h3>
         <p>다운로드 : <a href="./data.json" target="_blank">보기 (.json)</a></p>
-        <p>개발자들이 주로 쓰는 json 형식이고 어렵지 않다. 표를 글자로 표현한다고 생각하면 쉽다.</p>
-        <h4>형식 (버전 0.0.2) <a href="/post/version.html">이전버전 및 규칙 보기</a></h4>
+        <p>개발자들이 주로 쓰는 json 형식이고 어렵지 않다. 표를 글자로 표현했다고 생각하면 쉽습니다.</p>
+        <h4>형식 (버전 0.0.3) <a href="/post/version.html">이전버전 및 규칙 보기</a></h4>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
             {
                 <li>"num":1,<span class="notjson"> => 감염자 번호 {1,2,3 ...}</span></li>
@@ -80,6 +99,7 @@
                 <li>"wuhan":true,<span class="notjson"> => 우한 방문여부</span></li>
                 <li>"status":1,<span class="notjson"> => 상태 {0:사망, 1:격리 중, 2:완치}</span></li>
                 <li>"confirmDate":"2020-01-20"<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
+                <li>"dischargeDate":"2020-02-06"<span class="notjson"> => 완치 날짜 {yyyy-mm-dd}</span></li>
             }
         </ul>
         <br>
@@ -99,6 +119,7 @@
                 <li>"wuhan":true,</li>
                 <li>"status":1,</li>
                 <li>"confirmDate":"2020-01-20"</li>
+                <li>"dischargeDate":"2020-02-06"</li>
             }
         </ul>
         <p>추가로 표시해줄 내용, 정리해서 보기쉽게 만들 내용이 있다면, 제보바랍니다.</p>
