--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <li>"from":"우한 방문",<span class="notjson"> => 모감염자와 관계 또는 방문 지역 {"#0 지인","?? 방문", ...}</span></li>
                 <li>"wuhan":true,<span class="notjson"> => 우한 방문여부</span></li>
                 <li>"status":1,<span class="notjson"> => 상태 {0:사망, 1:격리 중, 2:완치}</span></li>
-                <li>"confirmDate":"2020-01-20"<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
+                <li>"confirmDate":"2020-01-20",<span class="notjson"> => 확진 날짜 {yyyy-mm-dd}</span></li>
                 <li>"dischargeDate":"2020-02-06"<span class="notjson"> => 완치 날짜 {yyyy-mm-dd}</span></li>
             }
         </ul>
@@ -118,7 +118,7 @@
                 <li>"from":"우한 방문",</li>
                 <li>"wuhan":true,</li>
                 <li>"status":1,</li>
-                <li>"confirmDate":"2020-01-20"</li>
+                <li>"confirmDate":"2020-01-20",</li>
                 <li>"dischargeDate":"2020-02-06"</li>
             }
         </ul>
