--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <style>
         .stats_inner{display:inline-block;margin: 0 50px 0 0;vertical-align: top;}
+        #stats{margin: 10px;}
         @media(max-width:400px){
             .stats_inner{margin: 0;}
         }
