--- a/search.html
+++ b/search.html
@@ -74,7 +74,7 @@
 </style>
 </head>
 <body>
-    <h1 style="text-align: center;padding: 20px 0 10px;margin: 0;background-color: #333;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">선별진료소 현황</span> <span style="display: block;"><a href="https://www.mohw.go.kr/react/popup_200128.html" style="color: #03a9f4;font-size: 16px;">(20년 2월 2일 18:00 기준)</a></span></h1>
+    <h1 style="text-align: center;padding: 20px 0 10px;margin: 0;background-color: #333;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">선별진료소 현황</span></h1>
     <a href="/" style="position: absolute;top: 21px;color: #fff;left: 20px;font-size: 26px;">&lt;</a>
     <table colspan="3" style="background-color: #333;color: #fff;width: 100%;" cellpadding="10">
         <tbody><tr>
@@ -82,6 +82,7 @@
             <td style="padding: 10px 0 12px;"><input type="text" style="padding: 7px;border: 0;border-radius: 5px;width: 100%;" id="address" onkeyup="if (window.event.keyCode == 13) {search()} if(this.value==''){search()}" placeholder="검색어를 입력하세요 (지역, 병원명, 전화번호 검색가능)"></td>
             <td style="width: 100px;padding: 10px 0 12px;"><span class="srchbtn" onclick="search()">검색하기</span></td>
         </tr></tbody></table>
+    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">공식 사이트에 검색기능이 추가되었습니다.</span> <span style="display: inline-block;margin: 6px"><a href="https://www.mohw.go.kr/react/popup_200128.html" style="color: #03a9f4;font-size: 16px;">공식 사이트로 이동하기</a></span></h1>
     <div id="srchrslt"></div>
     <div id="table"></div>
     <script>
