--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             <div style="max-width: 800px;">
                 <canvas id="Day_stats" width="400" height="200"></canvas>
             </div>
+            <br>
+            <h4>연령대 통계</h4>
+            <div style="max-width: 800px;">
+                <canvas id="Age_stats" width="400" height="200"></canvas>
+            </div>
         </div>
         <br>
         <p>* 추가로 통계에 보여줄만한 지표 아이디어 있으시면 아래 건의하기에서 제보부탁드립니다.</p>
