--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
             <!--<li><a href="./search.html">선별진료소 검색하기</a> (검색기능을 추가하여 제공중)</li>-->
             <li><a href="https://www.mohw.go.kr/react/popup_200128.html" target="_blank">선별진료소 검색하기</a> (공식: 2020-02-04 부터 검색기능 업데이트)</li>
-            <li><a href="http://coronamap.site/" target="_blank">코로나맵</a></li>
+            <li><a href="http://coronamap.site/" target="_blank">코로나 맵</a></li>
         </ul>
         <br>
         <h3>데이터 파일</h3>
-        <p>다운로드 : <a href="./data.json" target="_blank">보기 (.json)</a></p>
+        <p>다운로드 : <a href="./data.json" target="_blank">보기 (.json)</a> <a href="/post/table.html" target="_blank">표로 보기 (한컴, 워드, 엑셀등에 활용)</a></p>
         <p>개발자들이 주로 쓰는 json 형식이고 어렵지 않다. 표를 글자로 표현했다고 생각하면 쉽습니다.</p>
         <h4>형식 (버전 0.0.3) <a href="/post/version.html">이전버전 및 규칙 보기</a></h4>
         <ul style="background-color: #F5F5F5;padding: 20px;border-radius: 20px;">
