--- a/cn/index.html
+++ b/cn/index.html
@@ -63,6 +63,6 @@
         </div>
         <br>
     </div>
-    <script src="main.js"></script>
+    <script src="main.min.js"></script>
 </body>
 </html>
