--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
         <h3>그래프 통계</h3>
         <div id="stats2">
             <h4>일별 확진자/완치자 통계</h4>
-            <div style="max-width: 800px;display: none;">
+            <div style="max-width: 800px;">
                 <canvas id="Day_stats" width="400" height="200"></canvas>
             </div>
-            <p>그래프가 잘못되어 수정중입니다.</p>
             <br>
             <h4>연령대 통계</h4>
             <div style="max-width: 800px;">
