--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
-    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 일부 잘못표기된 경우가 있었습니다. 업데이트중입니다.</span></h1>
+    <!--<h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 일부 잘못표기된 경우가 있었습니다. 업데이트중입니다.</span></h1>-->
     <div class="top">
         <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
@@ -65,7 +65,7 @@
         <h3>그래프 통계</h3>
         <div id="stats2">
             <h4>일별 확진자/완치자 통계</h4>
-            <div style="max-width: 800px;">
+            <div style="max-width: 800px;display: none;">
                 <canvas id="Day_stats" width="400" height="200"></canvas>
             </div>
             <br>
