--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3>그래프 통계</h3>
         <div id="stats2">
             <h4>일별 확진자/완치자 통계</h4>
-            <div style="max-width: 800px;display: none;">
+            <div style="max-width: 800px;">
                 <canvas id="Day_stats" width="400" height="200"></canvas>
             </div>
             <br>
