--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="chart" id="nCov"> 표 생성중. . . 계속 생성중이라면, 새로고침 해주세요 </div>
     <div class="content">
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
+        <p>#16, #27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
         <br>
         <h3>통계</h3>
         <div id="stats"></div>
