--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111050500" target="_blank">질병관리본부 홈페이지</a></li>
             <!--<li><a href="./search.html">선별진료소 검색하기</a> (검색기능을 추가하여 제공중)</li>-->
             <li><a href="https://www.mohw.go.kr/react/popup_200128.html" target="_blank">선별진료소 검색하기</a> (공식: 2020-02-04 부터 검색기능 업데이트)</li>
+            <li><a href="https://news.v.daum.net/v/20200209163958634" target="_blank">한눈에 보는 27명 환자 동선</a> 「중앙일보」, 2020년 2월 9일</li>
             <li><a href="http://coronamap.site/" target="_blank">코로나 맵</a></li>
         </ul>
         <br>
