--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Treant.css">
     <link rel="stylesheet" href="cc.css">
     <meta name="description" content="신종 코로나(우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
-    <meta property="og:url" content="https://ncov-korea.cf/" >
+    <meta property="og:url" content="https://ncov-korea.com/" >
     <meta property="og:site_name" content="2019-nCov 한국 감염표" >
     <meta property="og:title" content="2019-nCov 한국 감염표" >
     <meta property="og:image" content="/imgs/main.png" />
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
-    <!--<h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 일부 잘못표기된 경우가 있었습니다. 업데이트중입니다.</span></h1>-->
+    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px">ncov-korea.com</span></h1>
     <div class="top">
         <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
