--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-    <title>2019-nCov 한국 감염표</title>
+    <title>코로나19 한국 감염표</title>
     <link rel="stylesheet" href="Treant.css">
     <link rel="stylesheet" href="cc.css">
-    <meta name="description" content="신종 코로나(우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
+    <meta name="description" content="코로나19(우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
     <meta property="og:url" content="https://ncov-korea.com/" >
     <meta property="og:site_name" content="2019-nCov 한국 감염표" >
     <meta property="og:title" content="2019-nCov 한국 감염표" >
@@ -32,8 +32,9 @@
     </style>
 </head>
 <body>
-    <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">신종 코로나 바이러스</span> <span style="display: inline-block;">확진자 현황</span></h1>
+    <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <h1 id="domain" style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px"><a href="/">ncov-korea.com</a></span></h1>
+    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 명칭이 바뀌었습니다.</span> <span style="display: inline-block;margin: 6px">신종 코로나 바이러스 감염증</span>-&gt;<span style="display: inline-block;margin: 6px">코로나19</span></h1>
     <script>
         (function(){
             if(document.referrer.split("/")[2]!="ncov-korea.cf"){
@@ -75,13 +76,19 @@
         </div>
         <br>
         <p>* 추가로 통계에 보여줄만한 지표 아이디어 있으시면 아래 건의하기에서 제보부탁드립니다.</p>
+        <h2 style="display: none;">우한폐렴</h2>
+        <p style="display: none;">우한폐렴으로 불리던 우한발 바이러스</p>
+        <h2 style="display: none;">신종 코로나 바이러스 감염증</h2>
+        <p style="display: none;">신종 코로나 바이러스 감염증으로 바뀌어 불리게되고(2019-nCov)</p>
+        <h2 style="display: none;">코로나19</h2>
+        <p style="display: none;">코로나19(COVID19)로 재명명 되었다.</p>
         <br>
         <h3>자료 출처</h3>
         <p>질병관리본부 홈페이지와 뉴스 기사</p>
         <p>* 출처마다 나이가 ± 1 정도 차이 날 수도 있음</p>
         <br>
         <h3>소개</h3>
-        <p>신종 코로나 바이러스 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
+        <p>코로나19(신종 코로나 바이러스, 우한폐렴) 감염증의 확진자 현황 관계도를 그린 페이지입니다.</p>
         <p>데이터 파일을 이용하여 쉽게 관계도가 그려지도록 만들어졌으며,</p>
         <p>누구나 쉽게 데이터 파일에 접근 가능하도록 페이지 하단에 형식을 소개해드립니다.</p>
         <br>
