--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>코로나19 한국 감염표</title>
     <link rel="stylesheet" href="Treant.css">
     <link rel="stylesheet" href="cc.css">
-    <meta name="description" content="코로나19(우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
+    <meta name="description" content="코로나19(신종 코로나 바이러스 감염증, 우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
     <meta property="og:url" content="https://ncov-korea.com/" >
-    <meta property="og:site_name" content="2019-nCov 한국 감염표" >
-    <meta property="og:title" content="2019-nCov 한국 감염표" >
+    <meta property="og:site_name" content="COVID19(2019-nCov) 한국 감염표" >
+    <meta property="og:title" content="COVID19(2019-nCov) 한국 감염표" >
     <meta property="og:image" content="/imgs/main.png" />
     <meta name="google-site-verification" content="gGqBF7a0TskSu6qSXgqJhv9QwM_qD1rE10nhCqY2IS0" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
