--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #222;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <h1 id="domain" style="text-align: center;padding: 5px;margin: 0;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px"><a href="/">ncov-korea.com</a></span></h1>
-    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 명칭이 바뀌었습니다.</span> <span style="display: inline-block;margin: 6px">신종 코로나 바이러스 감염증</span>-&gt;<span style="display: inline-block;margin: 6px">코로나19</span></h1>
+    <!--<h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 명칭이 바뀌었습니다.</span> <span style="display: inline-block;margin: 6px">신종 코로나 바이러스 감염증</span>-&gt;<span style="display: inline-block;margin: 6px">코로나19</span></h1>-->
     <script>
         (function(){
             if(document.referrer.split("/")[2]!="ncov-korea.cf"){
@@ -58,6 +58,7 @@
     <div class="content">
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <p>#27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
+        <p><span style="color: #b71c1c;font-weight: bold;font-size: 2em;">→</span> : 감염수칙을 지키지 않아 감염된 사례</p>
         <br>
         <h3>통계</h3>
         <div id="stats"></div>
