--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="content">
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <p>#27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
-        <p><span style="color: #b71c1c;font-weight: bold;font-size: 2em;">→</span> : 감염수칙을 지키지 않아 감염된 사례</p>
+        <p><span style="color: #b71c1c;font-weight: bold;font-size: 2em;">↓</span> : 감염수칙을 지키지 않아 감염된 사례</p>
         <br>
         <h3>통계</h3>
         <div id="stats"></div>
