--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <style>
         .stats_inner{display:inline-block;margin: 0 50px 0 0;vertical-align: top;}
         #stats{margin: 10px;}
+        .today_new{border: 1px solid #FF9800;}
+        .today_new:before{content: 'New';position: absolute;color: #e65100;font-weight: bold;}
         @media(max-width:400px){
             .stats_inner{margin: 0;}
         }
