--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .stats_inner{display:inline-block;margin: 0 50px 0 0;vertical-align: top;}
         #stats{margin: 10px;}
         .today_new{border: 1px solid #FF9800;}
-        .today_new:before{content: 'New';position: absolute;color: #e65100;font-weight: bold;}
+        .today_new:before{content: 'N';position: absolute;font-weight: bold;color: #fff;left: 2px;top: 2px;background-color: #e65100;padding: 0 2px;border-radius: 3px;}
         @media(max-width:400px){
             .stats_inner{margin: 0;}
         }
