--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-    <title>코로나19 한국 감염표</title>
-    <link rel="stylesheet" href="Treant.css">
-    <link rel="stylesheet" href="cc.css">
-    <meta name="description" content="코로나19(신종 코로나 바이러스 감염증, 우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
-    <meta property="og:url" content="https://ncov-korea.com/" >
-    <meta property="og:site_name" content="COVID19(2019-nCov) 한국 감염표" >
-    <meta property="og:title" content="COVID19(2019-nCov) 한국 감염표" >
-    <meta property="og:image" content="/imgs/main.png" />
     <meta name="google-site-verification" content="gGqBF7a0TskSu6qSXgqJhv9QwM_qD1rE10nhCqY2IS0" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136150577-3"></script>
@@ -21,6 +14,14 @@
       gtag('config', 'UA-136150577-3');
     </script>
     <script data-ad-client="ca-pub-2722856117249943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <title>코로나19 한국 감염표</title>
+    <link rel="stylesheet" href="Treant.css">
+    <link rel="stylesheet" href="cc.css">
+    <meta name="description" content="코로나19(신종 코로나 바이러스 감염증, 우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
+    <meta property="og:url" content="https://ncov-korea.com/" >
+    <meta property="og:site_name" content="COVID19(2019-nCov) 한국 감염표" >
+    <meta property="og:title" content="COVID19(2019-nCov) 한국 감염표" >
+    <meta property="og:image" content="/imgs/main.png" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <style>
         .stats_inner{display:inline-block;margin: 0 50px 0 0;vertical-align: top;}
@@ -33,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #333;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
+    <h1 style="text-align: center;padding: 20px 0;margin: 0 0 20px;background-color: #333;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <h1 id="domain" style="text-align: center;padding: 5px;margin: 0;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px"><a href="/">ncov-korea.com</a></span></h1>
     <!--<h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">최근 명칭이 바뀌었습니다.</span> <span style="display: inline-block;margin: 6px">신종 코로나 바이러스 감염증</span>-&gt;<span style="display: inline-block;margin: 6px">코로나19</span></h1>-->
     <script>
