--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       gtag('config', 'UA-136150577-3');
     </script>
     <script data-ad-client="ca-pub-2722856117249943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <title>코로나19 한국 감염표</title>
+    <title>코로나19 한국 현황표</title>
     <link rel="stylesheet" href="Treant.css">
     <link rel="stylesheet" href="cc.css">
     <meta name="description" content="코로나19(신종 코로나 바이러스 감염증, 우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
