--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="cc.css">
     <meta name="description" content="코로나19(신종 코로나 바이러스 감염증, 우한 폐렴) 감염자들의 관계도를 그린 페이지입니다.">
     <meta property="og:url" content="https://ncov-korea.com/" >
-    <meta property="og:site_name" content="COVID19(2019-nCov) 한국 감염표" >
-    <meta property="og:title" content="COVID19(2019-nCov) 한국 감염표" >
+    <meta property="og:site_name" content="COVID-19(2019-nCov) 한국 감염표" >
+    <meta property="og:title" content="COVID-19(2019-nCov) 한국 감염표" >
     <meta property="og:image" content="/imgs/main.png" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <style>
@@ -105,7 +105,7 @@
             <!--<li><a href="./search.html">선별진료소 검색하기</a> (검색기능을 추가하여 제공중)</li>-->
             <li><a href="https://www.mohw.go.kr/react/popup_200128.html" target="_blank">선별진료소 검색하기</a> (공식: 2020-02-04 부터 검색기능 업데이트)</li>
             <li><a href="https://news.v.daum.net/v/20200209163958634" target="_blank">한눈에 보는 27명 환자 동선</a> 「중앙일보」, 2020년 2월 9일</li>
-            <li><a href="http://coronamap.site/" target="_blank">코로나 맵</a></li>
+            <li><a href="https://coronamap.site/" target="_blank">코로나 맵</a></li>
         </ul>
         <br>
         <h3>데이터 파일</h3>
@@ -166,7 +166,7 @@
     </div>
     <script src="raphael.js"></script>
     <script src="Treant.min.js"></script>
-    <script src="main.min.js"></script>
+    <script src="main0218.min.js"></script>
 <div id="alertMsg" style="display: none;"><span class="xbtn" title="닫기" onclick="document.getElementById('alertMsg').style.display='none';">X</span><h2 id="title_"></h2><div id="info_"></div></div>
 </body>
 </html>
