--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <script src="raphael.js"></script>
     <script src="Treant.min.js"></script>
-    <script src="main0218.min.js"></script>
+    <script src="js.min.js"></script>
 <div id="alertMsg" style="display: none;"><span class="xbtn" title="닫기" onclick="document.getElementById('alertMsg').style.display='none';">X</span><h2 id="title_"></h2><div id="info_"></div></div>
 </body>
 </html>
