--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
     </div>
     <div class="chart" id="nCov"> 표 생성중. . . 계속 생성중이라면, 새로고침 해주세요 </div>
     <div class="content">
+        <!--<p>남성 : <span style="color: #99d9ea">■</span> | 여성 : <span style="color: #ffaec9">■</span> | 확인중 : <span style="color: #c3c3c3">■</span></p>
+        <p><span style="color: #4CAF50">#번호</span> : 완치 | <span style="font-weight: bold;color: #fff;background-color: #e65100;padding: 0 3px;border-radius: 3px;font-size: 14px;">N</span> : 2일 이내 확진자</p>
+        <br>-->
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <p>#27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
+        <p>* 정확한 업데이트를 위해 확진자는 확진자 번호가 부여된 후(보통 2시 브리핑) 업데이트 될 수 있습니다.</p>
         <p><span style="color: #b71c1c;font-weight: bold;font-size: 2em;">↓</span> : 감염수칙을 지키지 않아 감염된 사례</p>
         <br>
         <h3>통계</h3>
@@ -166,7 +170,13 @@
     </div>
     <script src="raphael.js"></script>
     <script src="Treant.min.js"></script>
-    <script src="js.min.js?"></script>
+    <script>
+        (function(){
+            var s = document.createElement("script");
+            s.src='js.min.js?'+parseInt(new Date().getTime()/60000);
+            document.body.appendChild(s);
+        })();
+    </script>
 <div id="alertMsg" style="display: none;"><span class="xbtn" title="닫기" onclick="document.getElementById('alertMsg').style.display='none';">X</span><h2 id="title_"></h2><div id="info_"></div></div>
 </body>
 </html>
