--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #333;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <h1 id="domain" style="text-align: center;padding: 5px;margin: 0;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px"><a href="/">ncov-korea.com</a></span></h1>
-    <!--<h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">#47 ~ #51 번 확진자</span> <span style="display: inline-block;margin: 6px">2시 이후 반영 예정입니다.</span></h1>-->
+    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #efefef;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">정확한 발표 이후 수정될 수 있습니다.</span> <span style="display: inline-block;margin: 6px">일부 정보만 있는 확진자는 추후 정보가 나오는대로 수정될 예정입니다.</span></h1>
     <script>
         (function(){
             if(document.referrer.split("/")[2]!="ncov-korea.cf"){
