--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             }
         </ul>
         <p>추가로 표시해줄 내용, 정리해서 보기쉽게 만들 내용이 있다면, 제보바랍니다.</p>
-        <br>
-        <h3>포스트</h3>
-        <ul class="sitelist">
+        <br style="display: none;">
+        <h3 style="display: none;">포스트</h3>
+        <ul class="sitelist" style="display: none;">
             <li><a href="/post/1.html">신종 코로나 바이러스는 무엇이고, 예방법은?</a></li>
             <li><a href="/post/2.html">치료약이 없어 고령환자에게 매우 취약하다.</a></li>
             <li><a href="/post/3.html">치사율 2%? 15%?</a></li>
