--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <script>
         (function(){
             var s = document.createElement("script");
-            s.src='js.js?'+parseInt(new Date().getTime()/60000);
+            s.src='js.min.js?'+parseInt(new Date().getTime()/60000);
             document.body.appendChild(s);
         })();
     </script>
